Add handler that fetch authenticated user
